[gd_scene load_steps=9 format=3 uid="uid://j66jiylppu2k"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_8n0q6"]
[ext_resource type="Shader" path="res://Scenes/Locations/space.gdshader" id="1_i6ql8"]
[ext_resource type="PackedScene" uid="uid://uw0rhwd81438" path="res://Scenes/Characters/Allies/player_ship.tscn" id="1_ssxms"]
[ext_resource type="PackedScene" uid="uid://d4menwy2xt6go" path="res://Scenes/UI/ui.tscn" id="2_x0sfa"]
[ext_resource type="Script" path="res://Scenes/Locations/camera_2d.gd" id="3_mphig"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ko6a"]
shader = ExtResource("1_i6ql8")
shader_parameter/dimensions = Vector2(30, 30)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.1
shader_parameter/small_stars_near_size = 0.1
shader_parameter/large_stars = 120.58
shader_parameter/large_stars_far_size = 0.1
shader_parameter/large_stars_near_size = 0.1
shader_parameter/far_stars_color = Color(1, 1, 1, 1)
shader_parameter/near_stars_color = Color(0.310617, 0.310617, 0.310617, 1)
shader_parameter/base_scroll_speed = 0.05
shader_parameter/additional_scroll_speed = 0.05
shader_parameter/Time = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5l7d"]
size = Vector2(20, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mat8w"]
size = Vector2(144, 12)

[node name="Battle" type="Node2D"]
script = ExtResource("1_8n0q6")

[node name="BG" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0ko6a")
offset_left = 167.0
offset_top = 340.0
offset_right = 467.0
offset_bottom = 640.0
rotation = -1.5708
color = Color(0.0475577, 0.0475576, 0.0475576, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 198)
zoom = Vector2(3.25, 3.25)
script = ExtResource("3_mphig")

[node name="Borders" type="Node2D" parent="."]

[node name="BorderL" type="StaticBody2D" parent="Borders"]
position = Vector2(249, 201)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderL"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_t5l7d")

[node name="BorderR" type="StaticBody2D" parent="Borders"]
position = Vector2(393, 201)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderR"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_t5l7d")

[node name="BorderDOWN" type="StaticBody2D" parent="Borders"]
position = Vector2(321, 263)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderDOWN"]
shape = SubResource("RectangleShape2D_mat8w")

[node name="BorderUP" type="StaticBody2D" parent="Borders"]
position = Vector2(320, 133)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderUP"]
shape = SubResource("RectangleShape2D_mat8w")

[node name="Projectile_Container" type="Node2D" parent="."]

[node name="Enemy_Spawns" type="Node2D" parent="."]

[node name="S1" type="Marker2D" parent="Enemy_Spawns"]
position = Vector2(320, 133)

[node name="S2" type="Marker2D" parent="Enemy_Spawns"]
position = Vector2(246, 201)

[node name="S3" type="Marker2D" parent="Enemy_Spawns"]
position = Vector2(396, 201)

[node name="CENTER_TARGET" type="Marker2D" parent="Enemy_Spawns"]
position = Vector2(320, 198)

[node name="Enemies" type="Node2D" parent="."]

[node name="Player_Ship" parent="." instance=ExtResource("1_ssxms")]
position = Vector2(320, 198)
rotation = -1.57079

[node name="UI" parent="." instance=ExtResource("2_x0sfa")]

[connection signal="child_order_changed" from="Enemies" to="." method="_on_enemies_child_order_changed"]
